--- a/content/pages/skills.html
+++ b/content/pages/skills.html
@@ -48,7 +48,7 @@
 
                 <div class="timeline-item">
                 <div class="timeline-content">
-                    <p class="timeline-list">Coding beginner</p>
+                    <p class="timeline-list">Coding intermediate</p>
                 </div>
                 </div>
 
