saw a small error (fixed now)

--- a/pages/work/index.html
+++ b/pages/work/index.html
@@ -29,7 +29,7 @@
                 <nav class="nav justify-content-end">
                     <a class="nav-link" href="../">Home</a>
                     <a class="nav-link" href="../cv/">CV</a>
-                    <a class="nav-link active" aria-current="page"  href="#">Work</a>
+                    <a class="nav-link active" aria-current="page"  href="">Work</a>
                     <a class="nav-link"  href="../contact/">Contact</a>
                 </nav>
             </div>
@@ -44,13 +44,13 @@
                 <div class="collapse" id="mainNavbar">
                     <ul class="navbar-nav ms-3">
                     <li class="nav-item">
-                        <a class="nav-link active text-end" aria-current="page" href="../">Home</a>
+                        <a class="nav-link text-end" href="../">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-end" href="../cv/">CV</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-end" href="">Work</a>
+                        <a class="nav-link active text-end"  aria-current="page" href="../work/">Work</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-end" href="../contact/">Contact</a>
