--- a/pages/contact/index.html
+++ b/pages/contact/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="../">Home</a>
                     <a class="nav-link" href="../cv/">CV</a>
                     <a class="nav-link"  href="../work/">Work</a>
-                    <a class="nav-link active" aria-current="page"  href="#">Contact</a>
+                    <a class="nav-link active" aria-current="page"  href="">Contact</a>
                 </nav>
             </div>
 
@@ -41,7 +41,7 @@
                 <div class="collapse" id="mainNavbar">
                     <ul class="navbar-nav ms-3">
                     <li class="nav-item">
-                        <a class="nav-link active text-end" aria-current="page" href="../">Home</a>
+                        <a class="nav-link text-end" href="../">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-end" href="../cv/">CV</a>
@@ -50,7 +50,7 @@
                         <a class="nav-link text-end" href="../work/">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-end" href="">Contact</a>
+                        <a class="nav-link active text-end"  aria-current="page" href="">Contact</a>
                     </li>
                     </ul>
                 </div>
