--- a/pages/cv/index.html
+++ b/pages/cv/index.html
@@ -25,7 +25,7 @@
                 <a href="#" class="logo">Tigo Kallenbach</a>
                 <nav class="nav justify-content-end">
                     <a class="nav-link" href="../">Home</a>
-                    <a class="nav-link active" aria-current="page"  href="#">CV</a>
+                    <a class="nav-link active" aria-current="page"  href="">CV</a>
                     <a class="nav-link"  href="../work/">Work</a>
                     <a class="nav-link"  href="../contact/">Contact</a>
                 </nav>
@@ -41,10 +41,10 @@
                 <div class="collapse" id="mainNavbar">
                     <ul class="navbar-nav ms-3">
                     <li class="nav-item">
-                        <a class="nav-link text-end" aria-current="page" href="../">Home</a>
+                        <a class="nav-link text-end" href="../">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-end" href="">CV</a>
+                        <a class="nav-link active text-end" aria-current="page" href="">CV</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-end" href="../work/">Work</a>
@@ -58,17 +58,17 @@
         </div>
     </header>
     <main>
-        <div class="container my-5">
-            <div class="row justify-content-center">
-                <div class="col-12 col-md-10 col-lg-8 text-center">
-                    <h1 class="mb-4">My CV</h1>
-                        <div class="ratio ratio-4x3" style="min-height:800px;">
-                            <iframe src="../../content/images/CV/CV.pdf" title="CV" style="border:0; min-height:400px;" allowfullscreen></iframe>
-                        </div>
-                    <!-- <a href="../../content/images/CV/CV.pdf" class="btn btn-primary mt-3" target="_blank" rel="noopener">Download CV (PDF)</a> -->
-                </div>
+    <div class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-12 col-md-10 col-lg-8 text-center">
+                <h1 class="mb-4">My CV</h1>
+                    <div class="ratio ratio-4x3" style="min-height:800px;">
+                        <iframe src="../../content/images/CV/CV.pdf" title="CV" style="border:0; min-height:400px;" allowfullscreen></iframe>
+                    </div>
+                <!-- <a href="../../content/images/CV/CV.pdf" class="btn btn-primary mt-3" target="_blank" rel="noopener">Download CV (PDF)</a> -->
             </div>
         </div>
+    </div>
     </main>
 </body>
 </html>
