--- a/pages/index.html
+++ b/pages/index.html
@@ -69,14 +69,14 @@
             </div>
 
             <div class="home-content text-white text-start">
-              <h1 class="mb-3">Hi, het is <span>Tigo</span></h1>
-              <h3 class="typing-text mb-4">Ik ben een <span></span></h3>
+              <h1 class="mb-3">Hi, it is <span>Tigo</span></h1>
+              <h3 class="typing-text mb-4">I am a <span></span></h3>
 
               <p class="mb-4">
-                Ik werk bij de Lidl in de weekenden. <br>
-                Ook houd ik van gamen, lezen en sporten. <br>
-                Ik ben 19 jaar oud, geboren op 17 mei 2006. <br>
-                En woon bij mijn ouders, in Rotterdam.
+                I work at Lidl on weekends. <br>
+                I also enjoy gaming, reading, and sports. <br>
+                I am 19 years old, born on May 17, 2006. <br>
+                And I live with my parents, in Rotterdam.
               </p>
       
               <div class="social-icons d-flex gap-3">
