--- a/portfolio/contact/index.html
+++ b/portfolio/contact/index.html
@@ -27,7 +27,7 @@
                     <a class="nav-link" href="../">Home</a>
                     <a class="nav-link" href="../cv/">CV</a>
                     <a class="nav-link"  href="../work/">Work</a>
-                    <a class="nav-link active" aria-current="page"  href="">Contact</a>
+                    <a class="nav-link active" aria-current="page"  href="../contact/">Contact</a>
                 </nav>
             </div>
 
@@ -50,7 +50,7 @@
                         <a class="nav-link text-end" href="../work/">Work</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link active text-end"  aria-current="page" href="">Contact</a>
+                        <a class="nav-link active text-end"  aria-current="page" href="../contact/">Contact</a>
                     </li>
                     </ul>
                 </div>
