--- a/portfolio/cv/index.html
+++ b/portfolio/cv/index.html
@@ -25,7 +25,7 @@
                 <a href="#" class="logo">Tigo Kallenbach</a>
                 <nav class="nav justify-content-end">
                     <a class="nav-link" href="../">Home</a>
-                    <a class="nav-link active" aria-current="page"  href="">CV</a>
+                    <a class="nav-link active" aria-current="page"  href="../cv/">CV</a>
                     <a class="nav-link"  href="../work/">Work</a>
                     <a class="nav-link"  href="../contact/">Contact</a>
                 </nav>
