--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,9 +24,9 @@
     <header>
       <div class="header">
         <div class="box d-none d-md-flex">
-            <a href="#" class="logo">Tigo Kallenbach</a>
+            <a href="/" class="logo">Tigo Kallenbach</a>
             <nav class="nav justify-content-end">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
               <a class="nav-link" href="cv/">CV</a>
               <a class="nav-link" href="work/">Work</a>
               <a class="nav-link" href="contact/">Contact</a>
@@ -43,7 +43,7 @@
           <div class="collapse" id="mainNavbar">
             <ul class="navbar-nav ms-3">
               <li class="nav-item">
-                <a class="nav-link active text-end" aria-current="page" href="#">Home</a>
+                <a class="nav-link active text-end" aria-current="page" href="/">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link text-end" href="cv/">CV</a>
