--- a/portfolio/work/index.html
+++ b/portfolio/work/index.html
@@ -25,11 +25,11 @@
     <header>
       <div class="header">
         <div class="box d-none d-md-flex">
-                <a href="#" class="logo">Tigo Kallenbach</a>
+                <a href="../" class="logo">Tigo Kallenbach</a>
                 <nav class="nav justify-content-end">
                     <a class="nav-link" href="../">Home</a>
                     <a class="nav-link" href="../cv/">CV</a>
-                    <a class="nav-link active" aria-current="page"  href="">Work</a>
+                    <a class="nav-link active" aria-current="page"  href="../work/">Work</a>
                     <a class="nav-link"  href="../contact/">Contact</a>
                 </nav>
             </div>
