--- a/portfolio/contact/index.html
+++ b/portfolio/contact/index.html
@@ -22,7 +22,7 @@
     <header>
       <div class="header">
         <div class="box d-none d-md-flex">
-                <a href="#" class="logo">Tigo Kallenbach</a>
+                <a href="../" class="logo">Tigo Kallenbach</a>
                 <nav class="nav justify-content-end">
                     <a class="nav-link" href="../">Home</a>
                     <a class="nav-link" href="../cv/">CV</a>
