--- a/portfolio/cv/index.html
+++ b/portfolio/cv/index.html
@@ -33,7 +33,7 @@
 
             <nav class="navbar navbar-dark bg-transparent d-flex d-md-none">
                 <div class="container-fluid">
-                    <a class="navbar-brand logo" href="#">Tigo Kallenbach</a>
+                    <a class="navbar-brand logo" href="../">Tigo Kallenbach</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNavbar" aria-controls="mainNavbar" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                     </button>
