--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,8 +7,8 @@
     <link rel="icon" type="image/x-icon" href="../../content/images/portfolio.ico">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="../../content/css/style.css">
-    <link rel="stylesheet" href="../../content/css/mobile-style.css">
+    <link rel="stylesheet" href="../content/css/style.css">
+    <link rel="stylesheet" href="../content/css/mobile-style.css">
 
     <!-- Cloudflare -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
